# cpp-concurrency

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/modules/: cpp-concurrency.cmake
doc/: .gitignore  00-TipsReferences.md  01-BasicThreadManagement.md  02-MutexAndAtomics.md  03-AsyncFuture.md  03-AsyncFuturePromise.md  04-ThreadedBuildingBlocksLoops.md  04-ThreadingBuildingBlocksLoops.md  04a-TBBMutexAndAtomics.md  04a-TBBTasks.md  05-TBBContainers.md  05-TBBMutexAndAtomics.md  06-TBBPipelines.md  06-TBBPipelinesGraphs.md  07-TBBGraphs.md  07-TBBPipelines.md  08-TBBGraphs.md  08-TBBTasks.md  CMakeLists.txt  Makefile  XX-Answers.md  XY-TBBGraphsExercise.md
docker/cpp-concurrency-fedora/: Dockerfile  checklist.md  gridka-vm.sh  init.coffee  wheel
src/c++11/: Makefile  multithread-calo-atomic-broken.cc  multithread-sum.cc  start_threads.cc  thread-arguments-mutex.cc  thread-arguments-problems.cc  thread-arguments-problems2.cc  thread-arguments.cc
src/cpp11/: CMakeLists.txt  Makefile  async-tasks  async-tasks-multi  async-tasks-multi.cc  async-tasks.cc  atomic-lock-free.cc  deadlock-fixed-using-lock-adoption.cc  deadlock-fixed.cc  multithread-calo-fixed  multithread-calo-fixed.cc  multithread-calo.cc  multithread-sum-fixed-atomic-efficient.cc  multithread-sum-fixed-atomic.cc  multithread-sum-fixed.cc  multithread-sum.cc  packaged_task.cc  start-threads-vec.cc  start-threads.cc  start_threads.cc  start_threads_vec.cc  thread-arguments-mutex.cc  thread-arguments-problems-fixed.cc  thread-arguments-problems.cc  thread-arguments-problems2-fixed.cc  thread-arguments-problems2.cc  thread-arguments.cc
src/cpp11/01-BasicThreadManagement/: CMakeLists.txt  Makefile  hw-concurrency.cc  thread-arguments-problems-fixed.cc  thread-arguments-problems2-fixed.cc  thread-arguments.cc
src/cpp11/02-MutexAndAtomics/: CMakeLists.txt  Makefile  atomic-lock-free.cc  deadlock.cc  multithread-calo-atomic-broken.cc  multithread-calo.cc  multithread-sum-fixed-mutex-efficient.cc  multithread-sum-fixed-mutex.cc  multithread-sum.cc
src/cpp11/03-AsyncFuture/: CMakeLists.txt  Makefile  packaged-task.cc
src/tbb/: CMakeLists.txt  Makefile  concurrent-vector-stdthread.cc  concurrent-vector-stl.cc  concurrent-vector.cc  concurrent_vector.cc  concurrent_vector_grow_by.cc  concurrent_vector_stdthread.cc  gen_input.cc  generate_and_filter.cc  maths-pipeline.cc  maths_pipeline.cc  mutex.cc  number_of_threads.cc  parallel-for-basic.cc  parallel-for-lambda.cc  parallel-for-mutex.cc  parallel-mandel-vector.cc  parallel-mandel.cc  parallel-minimisation.cc  parallel-reduce-pi-estimation.cc  parallel-reduce.cc  parallel_for_basic.cc  parallel_for_granularity.cpp  parallel_for_lambda.cc  parallel_mandel  parallel_mandel.cc  parallel_mandel_vector  parallel_mandel_vector.cc  parallel_reduce.cc  parallel_reduce_lambda.cc  parallel_reduce_pi_estimation.cc  parallel_reduce_sum.cc  scoped_lock.cc  tbb_tasks_recursive.cc  tbb_tasks_simple.cc  tutorialutils.cc  tutorialutils.h  version.cc
src/tbb/04-TBBLoops/: CMakeLists.txt  Makefile  burn.cc  number-of-threads.cc  parallel-for-basic.cc  parallel-mandel-vector.cc  parallel-mandel.cc  tutorialutils.cc  tutorialutils.h
src/tbb/05-TBBMutexAndAtomics/: CMakeLists.txt  deadlock-tbb-fixed.cc  deadlock-tbb.cc  multithread-tbb-sum-atomic-efficient.cc  multithread-tbb-sum-atomic.cc  multithread-tbb-sum-mutex-efficient.cc  multithread-tbb-sum-mutex.cc  multithread-tbb-sum.cc  parallel-cout-mutex.cc  parallel-cout.cc
src/tbb/06-TBBContainers/: CMakeLists.txt  Makefile  concurrent-vector.cc
src/tbb/07-TBBPipelines/: CMakeLists.txt  maths-pipeline.cc
src/tbb/08-TBBGraphs/: CMakeLists.txt  Makefile  data-flow-basic.cc  det-rand-dump.cc  det-read.cc  multi-node.cc
src/tbb/09-TBBTasks/: CMakeLists.txt  Makefile  fib-group.cc  maze.cc
src/tbb/XY-TBBGraphExercise-Problem/: CMakeLists.txt  fdet.cc  fdet.hpp  parallel-solution.cc  serial.cc
src/tbb/XY-TBBGraphExercise-Solution/: CMakeLists.txt  fdet-read.cc  fdet-test.cc  fdet-write.cc  fdet.cc  fdet.hpp  solution.cc
src/tbb/graph/: CMakeLists.txt  Makefile  data-flow-basic.cc  data-flow-ptrsrc.cc  data_flow.cc  data_flow_ptr.cc  data_flow_sharedptr.cc  dep-graph.cc  dep_graph.cc  dep_graph_broadcast.cc  det-data-proc.cc  det_data_proc.cc  det_rand_dump.cc  det_read.cc  file_process.cc  multi_node.cc  multi_node_reject.cc  single-node.cc  strip_det.hpp  stripdet.hpp
src/tbb/tasks/: CMakeLists.txt  cancel-sleep.cc  fib-example.cc  maze.cc
